# bot

./: .env.example  .gitignore  .mergify.yml  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  default.nix  docker.nix  package.json  shell.nix
.github/workflows/: rust.yml
src/: main.rs
src/core/: handler.rs  hooks.rs  keys.rs  mod.rs
src/modules/: mod.rs
src/modules/commands/: general.rs  mod.rs
