[package]
name = "bot"
version = "0.1.0"
edition = "2018"
documentation = "https://whirlsplash.org/docs/"
readme = "README.md"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/bot"
license = "GPL-3.0-only"
keywords = ["rust", "serenity", "worlds", "whirl", "whirlsplash"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
