[package]
name = "bot"
version = "0.1.0"
edition = "2018"
documentation = "https://whirlsplash.org/docs/"
readme = "README.md"
homepage = "https://whirlsplash.org"
repository = "https://github.com/Whirlsplash/bot"
license = "GPL-3.0-only"
keywords = ["rust", "serenity", "worlds", "whirl", "whirlsplash"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Discord
serenity = "0.10.8"

# IO
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }

# Environment
dotenv = "0.15.0"

# Logging
pretty_env_logger = "0.4.0"
log = "0.4.14"
